# AutoMate

./: .gitignore  README.md  package-lock.json  pyproject.toml
backend/: main.py  music.py  pyproject.toml  shell.nix  tts.py
frontend/: .gitignore  README.md  angular.json  package-lock.json  package.json
frontend/.angular/cache/19.2.19/autoMate/: .tsbuildinfo
frontend/.angular/cache/19.2.19/autoMate/vite/deps_ssr/: _metadata.json
frontend/src/: index.html
frontend/src/app/: app.component.html  app.component.spec.ts  app.component.ts  app.routes.ts  automate.service.spec.ts  automate.service.ts
frontend/src/app/audio-record-button/: audio-record-button.component.spec.ts  audio-record-button.component.ts
frontend/src/app/models/: track.model.ts
frontend/src/app/music/: music.component.html  music.component.ts
frontend/src/app/navigation/: navigation.component.html
frontend/src/app/services/: chat.service.ts  speechRecognition.service.ts  track.service.ts  tts.ts  youtube-search.service.spec.ts  youtube-search.service.ts  youtube.service.ts
src/app/: app.component.html  app.component.ts
src/app/audio-record-button/: audio-record-button.component.html  audio-record-button.component.ts
src/app/models/: track.model.ts
src/app/music/: music.component.ts
src/app/navigation/: navigation.component.html
src/app/services/: audio-recorder.service.ts  chat.service.ts  track.service.ts  tts.spec.ts  tts.ts  youtube.service.ts
