[project]
name = "automate"
version = "0.1.0"
description = "Assistant Numérique de Covoiturage Universel Libre et Évolutif"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-api-python-client>=2.187.0",
    "msgpack>=1.1.2",
    "numpy>=2.2.6",
    "sounddevice>=0.5.0",
    "websockets>=15.0.1",
]
